[package]
name = "pretend_cad"
version = "0.1.0"
authors = ["Daniel Boyle <boylede@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
amethyst = "0.13.2"
specs = "0.15.1"
nalgebra = "0.18"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]